--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <li><a class="mobile-phone" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                                 <li><a class="mobile-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                             </ul>
-                            <ul class="social-list">
+                            <ul class="mobile-social-list">
                                 <li class="social-list-item">
                                     <a href="" class="social-list-link">
                                         <svg class="social-list-icon" width="24" height="24">
@@ -95,7 +95,7 @@
             </div>
         </div>
     </header>
-    <!-- <main>
+    <main>
         <section class="hero">
             <div class="container">
                 <h1 class="text">Effective Solutions for Your Business</h1>
@@ -169,7 +169,9 @@
                 <h2 class="section-name">Our Team</h2>
                 <ul class="ul-list">
                     <li class="people">
-                        <img src="./images/mark.jpg" alt="mark" width="264">
+                        <img srcset="./images/mark.jpg 1x, ./images/mark@2x.jpg 2x"
+                        src="./images/mark.jpg" 
+                        alt="mark" width="264">
                         <div class="team-card">
                             <h3 class="head">Mark Guerrero</h3>
                             <p class="descr">Product Designer</p>
@@ -206,7 +208,9 @@
                         </div>
                     </li>
                     <li class="people">
-                        <img src="./images/tom.jpg" alt="tom" width="264">
+                        <img srcset="./images/tom.jpg 1x, ./images/tom@2x.jpg 2x"
+                        src="./images/tom.jpg" 
+                        alt="tom" width="264">
                         <div class="team-card">
                             <h3 class="head">Tom Ford</h3>
                             <p class="descr">Frontend Developer</p>
@@ -243,7 +247,9 @@
                             </div>
                     </li>
                     <li class="people">
-                        <img src="./images/camila.jpg" alt="camila" width="264">
+                        <img srcset="./images/camila.jpg 1x, ./images/camila@2x.jpg 2x"
+                        src="./images/camila.jpg" 
+                        alt="camila" width="264">
                         <div class="team-card">
                             <h3 class="head">Camila Garcia</h3>
                             <p class="descr">Marketing</p>
@@ -280,7 +286,9 @@
                         </div>
                     </li>
                     <li class="people">
-                        <img src="./images/daniel.jpg" alt="daniel" width="264">
+                        <img srcset="./images/daniel.jpg 1x, ./images/daniel@2x.jpg 2x"
+                        src="./images/daniel.jpg" 
+                        alt="daniel" width="264">
                         <div class="team-card">
                             <h3 class="head">Daniel Wilson</h3>
                             <p class="descr">UI Designer</p>
@@ -319,10 +327,11 @@
                 </ul>
             </div>
         </section>
+
         <section class="section">
             <div class="container">
                 <h2 class="section-name">Customers</h2>
-                <ul class="ul-list">
+                <ul class="ul-list-customers">
                     <li class="li-customers">
                         <a href="#" class="link-customers">
                             <svg width="104" height="56">
@@ -368,8 +377,8 @@
                 </ul>
             </div>
         </section>
-</main> -->
-<!-- <footer class="footer">
+</main>
+<footer class="footer">
     <div class="container">
         <div class="footer-logo">
             <a class="logo" href="./index.html">WEB<span class="logo-second">STUDIO</span></a>
@@ -422,7 +431,8 @@
             </form>
         </div>
     </div>
-</footer> -->
+</footer>
+
         <!-- Modal -->
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
