--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">                                
                             <div class="img-overlay">
-                                <img src="./images/interface.jpg" alt="interface" width="360" height="300">
+                                <img src="./images/portfolio/interface.jpg" alt="interface" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -61,7 +61,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                                <img src="./images/portfolio/payment.jpg" alt="payment" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -75,7 +75,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/meditaion.jpg" alt="meditaion" width="360" height="300">
+                                <img src="./images/portfolio/meditaion.jpg" alt="meditaion" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -89,7 +89,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
+                                <img src="./images/portfolio/taxi.jpg" alt="taxi" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -104,7 +104,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/screen.jpg" alt="screen" width="360" height="300">
+                                <img src="./images/portfolio/screen.jpg" alt="screen" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -118,7 +118,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+                                <img src="./images/portfolio/courses.jpg" alt="courses" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -132,7 +132,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/stories.jpg" alt="stories" width="360" height="300">
+                                <img src="./images/portfolio/stories.jpg" alt="stories" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -146,7 +146,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/food.jpg" alt="food" width="360" height="300">
+                                <img src="./images/portfolio/food.jpg" alt="food" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -160,7 +160,7 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
+                                <img src="./images/portfolio/coffee.jpg" alt="coffee" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
