--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">                                
                             <div class="img-overlay">
-                                <img src="./images/portfolio/interface.jpg" alt="interface" width="360" height="300">
+                                <img srcset="./images/portfolio/interface.jpg 1x, ./images/portfolio/interface@2x.jpg 2x"
+                                src="./images/portfolio/interface.jpg" alt="interface" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -121,7 +122,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/payment.jpg" alt="payment" width="360" height="300">
+                                <img srcset="./images/portfolio/payment.jpg 1x, ./images/portfolio/payment@2x.jpg 2x"
+                                src="./images/portfolio/payment.jpg" alt="payment" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -135,7 +137,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/meditaion.jpg" alt="meditaion" width="360" height="300">
+                                <img srcset="./images/portfolio/meditaion.jpg 1x, ./images/portfolio/meditaion@2x.jpg 2x"
+                                src="./images/portfolio/meditaion.jpg" alt="meditaion" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -149,7 +152,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/taxi.jpg" alt="taxi" width="360" height="300">
+                                <img srcset="./images/portfolio/taxi.jpg 1x, ./images/portfolio/taxi@2x.jpg 2x"
+                                src="./images/portfolio/taxi.jpg" alt="taxi" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -164,7 +168,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/screen.jpg" alt="screen" width="360" height="300">
+                                <img srcset="./images/portfolio/screen.jpg 1x, ./images/portfolio/screen@2x.jpg 2x"
+                                src="./images/portfolio/screen.jpg" alt="screen" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -178,7 +183,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/courses.jpg" alt="courses" width="360" height="300">
+                                <img srcset="./images/portfolio/courses.jpg 1x, ./images/portfolio/courses@2x.jpg 2x"
+                                src="./images/portfolio/courses.jpg" alt="courses" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -192,7 +198,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/stories.jpg" alt="stories" width="360" height="300">
+                                <img srcset="./images/portfolio/stories.jpg 1x, ./images/portfolio/stories@2x.jpg 2x"
+                                src="./images/portfolio/stories.jpg" alt="stories" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -206,7 +213,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/food.jpg" alt="food" width="360" height="300">
+                                <img srcset="./images/portfolio/food.jpg 1x, ./images/portfolio/food@2x.jpg 2x"
+                                src="./images/portfolio/food.jpg" alt="food" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
@@ -220,7 +228,8 @@
                     <li class="flex-element">
                         <a href="#" class="link-portfolio">
                             <div class="img-overlay">
-                                <img src="./images/portfolio/coffee.jpg" alt="coffee" width="360" height="300">
+                                <img srcset="./images/portfolio/coffee.jpg 1x, ./images/portfolio/coffee@2x.jpg 2x"
+                                src="./images/portfolio/coffee.jpg" alt="coffee" width="360" height="300">
                                 <p class="overlay">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                                 </p>
