--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,8 @@
                         </svg>
                     </button>
                     <ul class="mobile-nav">
-                        <li><a href="./index.html" class="mobile-link current-mobile">Studio</a></li>
-                        <li><a href="./portfolio.html" class="mobile-link">Portfolio</a></li>
+                        <li><a href="./index.html" class="mobile-link">Studio</a></li>
+                        <li><a href="./portfolio.html" class="mobile-link current-mobile">Portfolio</a></li>
                         <li><a href="" class="mobile-link">Contacts</a></li>
                     </ul>
                     
